# CMakeList.txt : CMake project for windows_processes_basic, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("windows_processes_basic")

# Add source to this project's executable.
add_executable (windows_processes_basic "windows_processes_basic.c" )

# TODO: Add tests and install targets if needed.
